Change endpoint objects naming from singular to plural
